[tool.poetry]
name = "logpy"
version = "0.0.1"
description = "Logging library for python 3.6 above"
authors = ["Los-had <bernardesmiguel709@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
