[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Los-had <bernardesmiguel709@gmail.com>"]
description = "Logging library for python 3.6 above"
name = "logpy"
version = "0.0.1"
[tool.poetry.dependencies]
colorama = "^0.4.4"
pre-commit = "^2.17.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
pytest = "^5.2"
